--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -9,7 +9,7 @@ nomad_os_packages:
   - "{% if ( ansible_distribution  == 'Ubuntu' and ansible_distribution_version is version('19', '<') ) or \
       ( ansible_distribution  == 'Debian' and ansible_distribution_version is version('11', '<') ) \
     %}\
-      cgroup-bin\
+      cgroup-lite\
     {% else %}\
       cgroup-tools\
     {% endif %}"
