--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,12 +1,12 @@
 ---
 # File: install.yml - package installation tasks for Nomad
 
-- name: OS packages
-  package:
-    name: "{{ item }}"
-    state: present
-  with_items: "{{ nomad_os_packages }}"
-  tags: installation
+# - name: OS packages
+#   package:
+#     name: "{{ item }}"
+#     state: present
+#   with_items: "{{ nomad_os_packages }}"
+#   tags: installation
 
 - name: Check Nomad package checksum file
   stat:
@@ -17,15 +17,15 @@
   register: nomad_checksum
   delegate_to: 127.0.0.1
 
-- name: Get Nomad package checksum file
-  get_url:
-    url: "{{ nomad_checksum_file_url }}"
-    dest: "{{ role_path }}/files/nomad_{{ nomad_version }}_SHA256SUMS"
-  become: false
-  run_once: true
-  tags: installation
-  when: not nomad_checksum.stat.exists
-  delegate_to: 127.0.0.1
+# - name: Get Nomad package checksum file
+#   get_url:
+#     url: "{{ nomad_checksum_file_url }}"
+#     dest: "{{ role_path }}/files/nomad_{{ nomad_version }}_SHA256SUMS"
+#   become: false
+#   run_once: true
+#   tags: installation
+#   when: not nomad_checksum.stat.exists
+#   delegate_to: 127.0.0.1
 
 - name: Get Nomad package checksum
   shell: |
@@ -45,16 +45,16 @@
   register: nomad_package
   delegate_to: 127.0.0.1
 
-- name: Download Nomad
-  get_url:
-    url: "{{ nomad_zip_url }}"
-    dest: "{{ role_path }}/files/{{ nomad_pkg }}"
-    checksum: "sha256:{{ nomad_sha256.stdout }}"
-    timeout: "42"
-  become: false
-  tags: installation
-  delegate_to: 127.0.0.1
-  when: not nomad_package.stat.exists
+# - name: Download Nomad
+#   get_url:
+#     url: "{{ nomad_zip_url }}"
+#     dest: "{{ role_path }}/files/{{ nomad_pkg }}"
+#     checksum: "sha256:{{ nomad_sha256.stdout }}"
+#     timeout: "42"
+#   become: false
+#   tags: installation
+#   delegate_to: 127.0.0.1
+#   when: not nomad_package.stat.exists
 
 - name: Create Temporary Directory for Extraction
   tempfile:
